--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,12 @@ footer a:hover{
 .profile__email{
   font-weight: 500;
 }
+.profile__logout{
+  font-size: 14px;
+  color:gray;
+  cursor: pointer;
+  text-decoration: underline;
+}
 .profile__logout:hover{
   color: black;
 }
@@ -327,57 +333,59 @@ input:checked + .carousel__slide-container .nav label{
 
 
 /* Form */
-.form{
-  margin:0 auto;
+.form {
+  margin: 0 auto;
   max-width: 680px;
   padding: 20px;
   margin-top: 20px;
 }
 
 .form input {
-   height: 20px;
-   padding: 10px 10px;
-   font-size: 16px;
-   border-radius: 0.3rem;
-   border:1px solid lightgray;
-   width: 96%;
-   max-width: 680px;
+  height: 20px; 
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 0.3rem;
+  border: 1px solid lightgray;
+  width: 95%;
+  max-width: 680px;
 }
-.form textarea{
+
+.form textarea {
   min-height: 480px;
-  padding: 10px 10px;
+  padding: 10px;
   font-size: 16px;
   line-height: 1.5;
   border-radius: 0.3rem;
   border: 1px solid lightgray;
-  width: 96%;
+  width: 95%; 
   max-width: 680px;
 }
+
 .form .form__block {
   margin-top: 20px;
   width: 100%;
 }
+
 .form label {
   display: block;
   font-weight: 500;
-  margin-bottom: 18px;
-  margin-top: 20px;
-} 
-.form .form__btn-submit{
+  margin-bottom: 20px;
+}
+
+.form .form__btn-submit {
   width: 100%;
   height: 48px;
-  padding: 10px 10px;
-  float: right;
-  margin: 0 auto;
-  cursor:pointer;
+  padding: 10px;
+  cursor: pointer;
   font-size: 16px;
   background-color: gray;
   color: #fff;
+  border: gray;
 }
 
-.form .form_btn--submit:hover,
-.form .form_btn--submit:focus {
-  background-color: #2563eb; 
+.form .form__btn-submit:hover,
+.form .form__btn-submit:focus {
+  background-color: #2563eb;
 }
 
  /* login form */
@@ -395,4 +403,23 @@ input:checked + .carousel__slide-container .nav label{
  }
  .form__linl:hover{
   color:black;
+ }
+ .form__error{
+  color:red
+ }
+
+
+ /* loader */
+ .loader{
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  border: 5px solid #2563eb;
+  border-radius: 50%;
+  z-index: 99;
+  animation: rotation 1s liner infinite;
  }
