--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,13 @@ footer a:hover{
 .post__edit a:hover{
   color:black
 }
+.post__no-post{
+  padding:24px;
+  text-align: center;
+  color:gray;
+  border:1px solid #f2f2f2;
+  border-radius: 20px;
+}
 
 
 /* post__detail */
