--- a/src/index.css
+++ b/src/index.css
@@ -62,8 +62,13 @@ footer a {
   color: gray;
   font-size: 20px;
 }
-footer a:hover{
+.footer a:hover{
   color:black;
+}
+.footer__theme-btn {
+  cursor:pointer;
+  width: 20px;
+  height: 20px;
 }
 
 /* post__nav */
@@ -441,4 +446,46 @@ input:checked + .carousel__slide-container .nav label{
   border-radius: 50%;
   z-index: 99;
   animation: rotation 1s liner infinite;
+ }
+
+
+ /* dark mode */
+
+ .whiter {
+  transition: all 0.3s linear
+ }
+
+ .dark {
+  transition: all 0.3s linear;
+  background-color: #1e2937;
+  min-height: 100vh;
+ }
+
+ .dark a,
+ .dark .form label,
+ .dark .post__delete,
+ .dark .profile__logout,
+ .dark .form__title,
+ .dark .post__nav--active,
+ .dark .post__title,
+ .dark .post__author-name,
+ .dark .footer__theme-btn,
+ .dark .profile__name {
+  color: white;
+ }
+
+ .dark a:hover,
+ .dark .post__text,
+ .dark .post__text--pre-wrap,
+ .dark .profile__email,
+ .dark .post__date,
+ .dark .form__block {
+  color:lightgray;
+ }
+ .dark .form__error {
+  color: #ff6a71;
+ }
+ .dark footer,
+ .dark header{
+  background-color: #111827;
  }
